Fix crash when closing multiple main windows

There is a global state in KisAbstractInputAction that needs to be set
correctly whenever they are called.
(That entire tool code really could do with an overhaul...it wasn't
designed with multiple independent main windows in mind.)

BUG:452834